objects/Artera_Job_Allocation__c.object
<CustomObject>
    <label>Job Assignment</label>
    <nameField>
        <displayFormat>JAN-{0000}</displayFormat>
        <label>Job Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Artera_Job__c</referenceTo>
        <relationshipName>Job_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <formula>IF( LEN( Truck_Number__c )=3 ,&apos;0&apos; &amp;  Truck_Number__c &amp;&quot;-&quot;&amp; Region_Code__c , Truck_Number__c &amp;&quot;-&quot;&amp; Region_Code__c)</formula>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Non- Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <isActive>false</isActive>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>Dispatch</fullName>
                    <isActive>false</isActive>
                    <label>Dispatch</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paycode__c</fullName>
        <label>Pay Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABSENT</fullName>
                </value>
                <value>
                    <fullName>Bad Weather</fullName>
                    <label>BAD WEATHER</label>
                </value>
                <value>
                    <fullName>BEREAV</fullName>
                </value>
                <value>
                    <fullName>HOLWRK</fullName>
                </value>
                <value>
                    <fullName>JURY</fullName>
                </value>
                <value>
                    <fullName>NO SHOW</fullName>
                </value>
                <value>
                    <fullName>OFF DUTY</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PERSONAL</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>SICK</fullName>
                </value>
                <value>
                    <fullName>SICK UNPAID</fullName>
                </value>
                <value>
                    <fullName>VBP</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>HOLIDAY</fullName>
                    <isActive>false</isActive>
                    <label>HOLIDAY</label>
                </value>
                <value>
                    <fullName>HRLY VAC</fullName>
                    <isActive>false</isActive>
                    <label>HRLY VAC</label>
                </value>
                <value>
                    <fullName>VACATION</fullName>
                    <isActive>false</isActive>
                    <label>VACATION</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Job__r.Project__r.Project_Id__c</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <label>Per Diem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lunch_Time__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Lunch Time (in mins)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Artera_Resource__r.Employee_ID__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <formula>Job__r.Artera_Region__r.Region_Code__c</formula>
        <label>Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_ADP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to ADP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>IF( ISNULL( Start_Time__c ),0,
IF(End_Time__c = Start_Time__c , 24,
IF(ISPICKVAL( Type__c , &apos;Leave&apos;),( End_Time__c - Start_Time__c ) /3600000 ,
IF(
MOD((( End_Time__c - Start_Time__c ) /3600000 - (Lunch_Time__c/60)),0.25) &lt; 0.125,
( End_Time__c - Start_Time__c ) /3600000 - (Lunch_Time__c/60) - MOD((( End_Time__c - Start_Time__c ) /3600000 - (Lunch_Time__c/60)),0.25),
( End_Time__c - Start_Time__c ) /3600000 - (Lunch_Time__c/60) +(0.25- MOD((( End_Time__c - Start_Time__c ) /3600000 - (Lunch_Time__c/60)),0.25))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Truck_Number__c</fullName>
        <formula>RIGHT(Job__r.Asset__r.Name, 3)</formula>
        <label>Truck Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Job__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>Artera_Resource__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Day_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Half Day Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Email__c</fullName>
        <label>Resource Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Artera_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Artera_Resource__c.Worker_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Artera_Resource__c</referenceTo>
        <relationshipLabel>Job Assignments</relationshipLabel>
        <relationshipName>Hydro_X_Job_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable_Perdiem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable Perdiem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_RecordTypeId__c</fullName>
        <formula>Job__r.RecordTypeId</formula>
        <label>Job RecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Email__c</fullName>
        <label>Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billable_End_Time__c</fullName>
        <formula>Start_Time__c + ( Total_Billable_Hours__c*60*60*1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <formula>Job__r.Work_Order__r.Work_Order_Number__c</formula>
        <label>Work Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Start_Time__c</fullName>
        <formula>Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Revised_Total_Hours__c</fullName>
        <formula>IF(End_Time__c = Start_Time__c , 24,
(If (( End_Time__c - Start_Time__c ) /3600000 - (Lunch_Time__c/60)&lt;0,0,( End_Time__c - Start_Time__c ) /3600000 - (Lunch_Time__c/60)))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revised Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_ADP_Perdiem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to ADP Perdiem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Job_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;https://powerteamservices239587345.lightning.force.com/lightning/r/Artera_Job_Allocation__c/&apos;+Id+&apos;/clone?useRecordTypeCheck=1&amp;backgroundContext=%2Flightning%2Fr%2FArtera_Job__c%2F&apos;+Job__r.Id +&apos;%2Fview&amp;count=1&apos;,&apos;Clone&apos;,&apos;_self&apos;)</formula>
        <label>Clone Job Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_ADP_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to ADP Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours__c</fullName>
        <formula>if( ISNULL(Start_Time__c),0,if( Change_to_Non_Billable__c =True,0, IF(Job__r.Total_Job_Ticket_Hours__c &lt; Total_Hours__c , Job__r.Total_Job_Ticket_Hours__c, Total_Hours__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Billable_End_Time__c</fullName>
        <formula>Non_Billable_Start_Time__c + (Total_Non_Billable_Hours__c *60*60*1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Billable End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Change_to_Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change to Non-Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Start_Date__c</fullName>
        <formula>IF( Billable_Start_Time__c &gt; Non_Billable_Start_Time__c , Job_Assignment_Date_Field__c +1, Job_Assignment_Date_Field__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Billable Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Start_Time__c</fullName>
        <formula>Billable_End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Billable Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Sent_to_ADP_Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to ADP Non Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Non_Billable_Hours__c</fullName>
        <formula>IF(Total_Hours__c - Total_Billable_Hours__c&gt;0,Total_Hours__c - Total_Billable_Hours__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Assignment_Date_Field__c</fullName>
        <label>Job Assignment Date</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Job_status_completed_validation</fullName>
        <active>true</active>
        <description>when job status is completed the user is not able to edit the record Apart from the user who has the permission to bypass the validation.</description>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Status__c ) , &quot;Completed&quot;), $User.Bypass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>You can&apos;t change the record information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Job_date_greater_than_prior_date</fullName>
        <active>false</active>
        <errorConditionFormula>Job_Assignment_Date_Field__c   &lt;   DATEVALUE(Job__r.CreatedDate)</errorConditionFormula>
        <errorDisplayField>Job_Assignment_Date_Field__c</errorDisplayField>
        <errorMessage>Error: Job date should not be prior to Created Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_not_greater_than_End_Time</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Time__c  &gt;  End_Time__c</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>Error: End Time Should be Greater than Start Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Admin_Cannot_Change_Start_and_End_Time</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name =&apos;Hydro-X Admin&apos;,
ISPICKVAL(Type__c, &apos;Leave&apos;),
OR(ISCHANGED(Start_Time__c ),ISCHANGED(End_Time__c ) )

)</errorConditionFormula>
        <errorMessage>Admin Cannot Change Start and End Time</errorMessage>
    </validationRules>
</CustomObject>